--- a/ws_be/package.json
+++ b/ws_be/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc",
     "dev": "tsc -b && node ./dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node index-step3.ts"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
